--- a/templates/user_base.html
+++ b/templates/user_base.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
     <style>
       nav {
         height: 30%;
@@ -23,11 +29,22 @@
     <nav>
       {{name}}'s Dashboard
       <div class="nav_items">
-        <a href="/profile">Profile</a> |
-        <a href="/cart">cart | </a>
-        <a href="/user-login">logout</a>
+        {% block nav%} {% endblock %}
+        <!-- <a href="/profile">Profile</a> | 
+        <a href="/cart">cart </a> | -->
+        <button type="button" class="btn btn-primary position-relative">
+          Cart
+          <span
+            class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
+          >
+            9+
+            <span class="visually-hidden">unread messages</span>
+          </span>
+        </button>
+        <a href="/logout">logout</a>
       </div>
     </nav>
+
     {% block content %} {% endblock %}
   </body>
 </html>
