--- a/templates/user/homepage.html
+++ b/templates/user/homepage.html
@@ -93,7 +93,7 @@
  <section id = "collection" class = "py-5">
         <div class = "container">
             <div class = "title text-center">
-                <h1 class = "position-relative d-inline-block">New Collection</h1>
+                
             </div>
 
             <div class = "row g-0">
@@ -133,7 +133,7 @@
             </div>
         </div>
     </section>
-
+    <h2 id="foot"> FOOTER</h2>
 
 
 
