--- a/templates/user/buy.html
+++ b/templates/user/buy.html
@@ -19,7 +19,7 @@
         <div class="d-flex flex-column justify-content-md-around ml-6">
           <div class="main_image ">
             <img
-              src="{{ url_for('static', filename=product.image) }}"
+              src="/static/assets/products/{{product.image }}"
               id="main_product_image"
               width="90%"
               height="90%"
