front end completed

--- a/templates/admin/admin.html
+++ b/templates/admin/admin.html
@@ -106,7 +106,7 @@
                   {% for product in products %}
                   <div class="col col-lg-2 shadow-lg border border-secondary m-5 list {{product.category}}">
                     <div class="collection-img position-relative">
-                        <img src="{{ url_for('static', filename=product.image) }}" class="w-100">
+                        <img src="/static/assets/products/{{product.image}}" class="w-100">
                         
                     </div>
                     <div class="text-center">
