--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -146,4 +146,16 @@ a {
 }
 a:hover {
   cursor: default;
+  text-decoration: none;
+  color: black;
+}
+.cat-card {
+  background-color: azure;
+}
+body {
+  background-color: rgb(248, 243, 238);
+}
+.search-buy {
+  background-color: thistle;
+  border-radius: 1px solid azure;
 }
