--- a/templates/admin/edit_product.html
+++ b/templates/admin/edit_product.html
@@ -8,8 +8,20 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{ url_for('static',filename='styles/header.css') }}"
+    />
   </head>
+
   <body>
+    <br />
+    <div class="main">
+      <div class="navigation">
+        <h2><a href="/">EcoMart</a></h2>
+      </div>
+    </div>
     <div class="container">
       <h1 class="mt-4">Edit Product</h1>
       <form method="post" enctype="multipart/form-data">
