--- a/templates/admin/manage_category.html
+++ b/templates/admin/manage_category.html
@@ -8,8 +8,20 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{ url_for('static',filename='styles/header.css') }}"
+    />
   </head>
+
   <body>
+    <br />
+    <div class="main">
+      <div class="navigation">
+        <h2><a href="/">EcoMart</a></h2>
+      </div>
+    </div>
     <section class="vh-50" style="background-color: #eee">
       <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
@@ -35,8 +47,10 @@
                         name="name"
                         placeholder="Category Name"
                       />
+                      <br />
                       <dl>
                         <p>
+                          <!-- <br /> -->
                           <input type="file" name="file" autocomplete="off" />
                         </p>
                       </dl>
@@ -66,7 +80,13 @@
                     <tr>
                       <th scope="row">{{category.id}}</th>
                       <td>{{category.name}}</td>
-                      <td>{{category.image}}</td>
+                      <td>
+                        <a
+                          href="http://127.0.0.1:5000/static/assets/categories/{{category.image}}"
+                          target="blank"
+                          >{{category.image}}</a
+                        >
+                      </td>
                       <td>
                         <button type="submit" class="btn btn-danger">
                           <a
