--- a/templates/user/cart.html
+++ b/templates/user/cart.html
@@ -8,9 +8,21 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{ url_for('static',filename='styles/header.css') }}"
+    />
   </head>
 
   <body>
+    <br />
+    <div class="main">
+      <div class="navigation">
+        <h2><a href="/">EcoMart</a></h2>
+      </div>
+    </div>
+
     <div class="container mt-5 mb-5">
       <div class="card shadow-lg p-3 mb-5 bg-white rounded">
         <div class="row g-0">
@@ -43,7 +55,9 @@
                   </td>
                   <td>₹{{ item.price * item.quantity }}</td>
                   <td>
-                    <button class="btn btn-danger">Remove</button>
+                    <a href="/cart/del/{{item.cart_id}}">
+                      <button class="btn btn-danger">Remove</button>
+                    </a>
                   </td>
                 </tr>
                 {% endfor %} {% else %}
@@ -58,8 +72,18 @@
               <h4 id="total-amount">Total: ₹{{ total }}</h4>
               <form action="/cart/place_order/{{user_id}}" method="POST">
                 <input type="hidden" name="user_id" value="{{ user_id }}" />
-                <input type="hidden" name="total" value="{{ total }}" />
-                <button type="submit" class="btn btn-primary ml-3">
+                <input
+                  type="hidden"
+                  id="hidden-total"
+                  name="total"
+                  value="{{ total }}"
+                />
+
+                <button
+                  type="submit"
+                  class="btn btn-primary ml-3"
+                  onclick="placeOrder()"
+                >
                   Place Order
                 </button>
               </form>
@@ -74,9 +98,54 @@
               </button>
               {% endif %}
             </div>
+            <br />
+            <input
+              type="text"
+              id="coupon_code"
+              name="coupon_code"
+              placeholder="Coupon Code"
+            />
+            <button
+              type="button"
+              id="apply_coupon"
+              class="btn btn-secondary ml-2"
+              onclick="applyCoupon()"
+            >
+              Apply Coupon
+            </button>
           </div>
         </div>
       </div>
     </div>
+    <script>
+      function applyCoupon() {
+        const couponInput = document.getElementById("coupon_code");
+        const totalAmountElement = document.getElementById("hidden-total");
+
+        const currentTotal = totalAmountElement.value;
+
+        const couponCode = couponInput.value.trim();
+
+        if (couponCode === "ECOMART25") {
+          const discountedTotal = parseInt(currentTotal - currentTotal * 0.25);
+
+          totalAmountElement.setAttribute("value", discountedTotal);
+          document.getElementById("total-amount").textContent =
+            "Total: ₹" + discountedTotal;
+
+          couponInput.setAttribute("disabled", true);
+          document
+            .getElementById("apply_coupon")
+            .setAttribute("disabled", true);
+
+          alert("Coupon applied: 15% off!");
+        } else {
+          alert("Invalid coupon code. Please enter a valid code.");
+        }
+      }
+      function placeOrder() {
+        alert("Order placed successfully!");
+      }
+    </script>
   </body>
 </html>
