new changes in ui (added promocode)

--- a/templates/admin/new_product.html
+++ b/templates/admin/new_product.html
@@ -82,7 +82,7 @@
         <div class="form-group">
           <label for="price">Best Before</label>
           <input
-            type="text"
+            type="date"
             class="form-control"
             id="price"
             name="best_before"
