--- a/templates/user/category.html
+++ b/templates/user/category.html
@@ -51,7 +51,7 @@
           {% for category in categories %}
           <div class="product">
             <div class="product-image">
-              <img src="/static/assets/categories/{{category.image}}" alt="" />
+              <img src="/static/assets/{{category.image}}" alt="" />
             </div>
             <div class="product-info">
               <br />
