--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -60,10 +60,7 @@
               category.name %}
               <div class="product" name="{{product.name}}">
                 <div class="product-image">
-                  <img
-                    src="/static/assets/products/{{product.image }}"
-                    alt=""
-                  />
+                  <img src="/static/assets/{{product.image }}" alt="" />
                 </div>
                 <div class="product-info">
                   <h2 class="product-name">{{product.name}}</h2>
