--- a/templates/login/new.html
+++ b/templates/login/new.html
@@ -232,5 +232,10 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script>
+      {% if popup %}
+      alert("You have entered invalid details!");
+      {% endif %}
+    </script>
   </body>
 </html>
