--- a/templates/user/buy.html
+++ b/templates/user/buy.html
@@ -29,7 +29,7 @@
         <div class="d-flex flex-column justify-content-md-around ml-6">
           <div class="main_image ">
             <img
-              src="/static/assets/products/{{product.image }}"
+              src="/static/assets/{{product.image }}"
               id="main_product_image"
               width="90%"
               height="90%"
