update added for js api fetch

--- a/templates/admin/manage_category.html
+++ b/templates/admin/manage_category.html
@@ -82,7 +82,7 @@
                       <td>{{category.name}}</td>
                       <td>
                         <a
-                          href="http://127.0.0.1:5000/static/assets/categories/{{category.image}}"
+                          href="http://127.0.0.1:5000/static/assets/{{category.image}}"
                           target="blank"
                           >{{category.image}}</a
                         >
