--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -159,3 +159,34 @@ body {
   background-color: thistle;
   border-radius: 1px solid azure;
 }
+
+/* filter styles */
+.filterDiv {
+  display: none;
+}
+
+.show {
+  display: block;
+}
+
+.container {
+  overflow: hidden;
+}
+
+/* Style the buttons */
+.btn {
+  border: none;
+  outline: none;
+  padding: 12px 16px;
+  background-color: #f1f1f1;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-color: #ddd;
+}
+
+.btn.active {
+  background-color: #666;
+  color: white;
+}
