--- a/templates/admin/edit_product.html
+++ b/templates/admin/edit_product.html
@@ -22,9 +22,10 @@
         <h2><a href="/">EcoMart</a></h2>
       </div>
     </div>
+
     <div class="container">
-      <h1 class="mt-4">Edit Product</h1>
-      <form method="post" enctype="multipart/form-data">
+      <h1 class="mt-4">Edit Product ({{product.name}})</h1>
+      <form enctype="multipart/form-data" id="edit_form">
         <div class="form-group">
           <label for="name">Product Name:</label>
           <input
@@ -39,14 +40,36 @@
 
         <div class="form-group">
           <label for="category">Category:</label>
-          <input
-            type="text"
-            class="form-control"
-            id="category"
+          <select
+            class="form-select form-select-md mb-3"
+            aria-label=".form-select-lg example"
             name="category"
-            required
-            value="{{product.category}}"
-          />
+          >
+            {% for category in categories %} {% if category.name ==
+            product.category %}
+            <option selected>{{product.category}}</option>
+            {% else %}
+            <option>{{category.name}}</option>
+            {% endif %} {% endfor %}
+          </select>
+        </div>
+
+        <div class="form-group">
+          <label for="category">SI unit</label>
+          <select
+            class="form-select form-select-md mb-3"
+            aria-label=".form-select-lg example"
+            name="si_unit"
+          >
+            <option>Select Unit</option>
+
+            <option>Per Dozen</option>
+            <option>Per Kg</option>
+            <option>Per Litre</option>
+            <option>Per Piece</option>
+            <option>Per Packet</option>
+            <option>Per Bottle</option>
+          </select>
         </div>
 
         <div class="form-group">
@@ -56,8 +79,20 @@
             class="form-control"
             id="price"
             name="price"
-            value="{{product.price}}"
             required
+            value="{{product.price}}"
+          />
+        </div>
+
+        <div class="form-group">
+          <label for="price">Best Before</label>
+          <input
+            type="date"
+            class="form-control"
+            id="price"
+            name="best_before"
+            required
+            value="{{product.best_before}}"
           />
         </div>
 
@@ -68,40 +103,138 @@
             class="form-control"
             id="quantity"
             name="quantity"
-            value="{{product.quantity}}"
             required
+            value="{{product.quantity}}"
           />
         </div>
 
         <div class="form-group">
-          <label for="time">Created On:</label>
+          <label for="time">Description</label>
           <input
             type="text"
             class="form-control"
-            id="time"
-            name="time"
-            value="{{product.time}}"
-            disabled
+            id="description"
+            name="description"
+            required
+            value="{{product.description}}"
           />
         </div>
-
+        <br />
         <div class="form-group">
           <label for="image">Image URL:</label>
           <input
             type="text"
-            class="form-control"
-            id="image"
             name="image"
+            autocomplete="off"
             value="{{product.image}}"
-            required
           />
         </div>
         <br />
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button
+          type="submit"
+          class="btn btn-primary"
+          onclick="update_product()"
+        >
+          Update Product
+        </button>
       </form>
+      <br />
+      <button type="submit" class="btn btn-danger" onclick="delete_product()">
+        Delete Product
+      </button>
     </div>
     <!-- Bootstrap JS (optional, only needed if you use Bootstrap components that require JavaScript) -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script>
+                  function delete_product() {
+                    var r = alert("Are you sure you want to delete this product?");
+
+                      myDataObject = {email: prompt("Enter admin email"), password: prompt("Enter admin's password")}
+
+                      remove({{ product.id }}, myDataObject);
+                      window.location.href = "/admin";
+                      // setTimeout(function(){ window.location.href = "/admin"; }, 1000);
+
+                  }
+
+                  function update_product() {
+                    var r = alert("Are you sure you want to update this product?");
+
+                      myDataObject = {email: prompt("Enter admin email"), password: prompt("Enter admin's password")}
+                      formData = new FormData(document.getElementById("edit_form")).forEach(function(value, key){
+                          myDataObject[key] = value;
+                      });
+                      //merge formData and myDataObject
+
+                      final = {...myDataObject, ...formData}
+                      console.log(JSON.stringify(final))
+                      update({{ product.id }}, final);
+                      window.location.href = "/admin";
+                      // setTimeout(function(){ window.location.href = "/admin"; }, 1000);
+
+                    }
+
+
+
+                  function remove(id, req_body) {
+
+                    fetch("http://127.0.0.1:5000/api/product/" + id, {
+                      method: "DELETE",
+                      headers: {
+                        "Content-Type": "application/json",
+                      },
+                      body: JSON.stringify(req_body),
+                    })
+                      .then((response) => {
+                        return response.json();
+                      })
+                      .then((data) =>
+                        // this is the data we get after doing the delete request, do whatever you want with this data
+                        alert(data.message)
+                      );
+                  }
+                  function update(id, req_body) {
+
+                    fetch("http://127.0.0.1:5000/api/product/" + id, {
+                      method: "PUT",
+                      headers: {
+                        "Content-Type": "application/json",
+                      },
+                      body: JSON.stringify(req_body),
+                    })
+                      .then((response) => {
+                        return response.json();
+                      })
+                      .then((data) =>
+                        // this is the data we get after doing the delete request, do whatever you want with this data
+                        alert(data.message)
+                      ).catch((err) => {
+                        alert(err)
+                      });
+                  }
+      //             function update_product() {
+      //     var r = confirm("Are you sure you want to update this product?");
+
+
+      //     var myDataObject = {
+      //         email: prompt("Enter admin email"),
+      //         password: prompt("Enter admin's password")
+      //     };
+
+      //     var formData = new FormData(document.getElementById("edit_form"));
+      //     var formDataObject = {};
+      //     formData.forEach(function (value, key) {
+      //         formDataObject[key] = value;
+      //     });
+
+      //     var finalData = { ...myDataObject, ...formDataObject };
+
+
+      //     var productId = "{{ product.id }}"; // Assuming this is how you're embedding the product ID in the HTML template
+
+      //     update(productId, finalData);
+      // }
+    </script>
   </body>
 </html>
