--- a/templates/admin/edit_category.html
+++ b/templates/admin/edit_category.html
@@ -13,15 +13,46 @@
       type="text/css"
       href="{{ url_for('static',filename='styles/header.css') }}"
     />
+    <style type="text/css">
+      .container {
+        max-width: 100%;
+      }
+    </style>
   </head>
 
   <body>
-    <br />
-    <div class="main">
-      <div class="navigation">
-        <h2><a href="/">EcoMart</a></h2>
+    <nav class="navbar navbar-expand-lg bg-body py-3">
+      <div class="container">
+        <a class="navbar-brand" href="/admin"
+          ><span class="fs-2"><strong>EcoMart</strong></span></a
+        ><button
+          data-bs-toggle="collapse"
+          class="navbar-toggler"
+          data-bs-target="#navcol-1"
+        >
+          <span class="visually-hidden">Toggle navigation</span
+          ><span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navcol-1">
+          <ul class="navbar-nav me-auto">
+            <li class="nav-item">
+              <a class="nav-link active" href="/admin/product_handler"
+                >Products</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/admin/userbase">Users</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/admin/dashboard">Dashboard</a>
+            </li>
+          </ul>
+          <button class="btn btn-primary" type="button">
+            <a href="/logout" class="text-decoration-none text-white">Logout</a>
+          </button>
+        </div>
       </div>
-    </div>
+    </nav>
     <section class="vh-50" style="background-color: #eee">
       <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
@@ -48,20 +79,8 @@
                         placeholder="Category Name"
                         value="{{category.name}}"
                       />
-                      <input
-                        type="text"
-                        id="form2"
-                        class="form-control"
-                        name="image"
-                        placeholder="Category Image"
-                        value="{{category.image}}"
-                      />
                     </div>
                   </div>
-                  <!-- 
-              <div class="col-12">
-                <button type="submit" class="btn btn-primary">Save</button>
-              </div> -->
 
                   <div class="col-10">
                     <button type="submit" class="btn btn-warning">
