--- a/templates/admin/manage_category.html
+++ b/templates/admin/manage_category.html
@@ -13,22 +13,53 @@
       type="text/css"
       href="{{ url_for('static',filename='styles/header.css') }}"
     />
+    <style type="text/css">
+      .container {
+        max-width: 100%;
+      }
+    </style>
   </head>
 
   <body>
-    <br />
-    <div class="main">
-      <div class="navigation">
-        <h2><a href="/">EcoMart</a></h2>
+    <nav class="navbar navbar-expand-lg bg-body py-3">
+      <div class="container">
+        <a class="navbar-brand" href="/admin"
+          ><span class="fs-2"><strong>EcoMart</strong></span></a
+        ><button
+          data-bs-toggle="collapse"
+          class="navbar-toggler"
+          data-bs-target="#navcol-1"
+        >
+          <span class="visually-hidden">Toggle navigation</span
+          ><span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navcol-1">
+          <ul class="navbar-nav me-auto">
+            <li class="nav-item">
+              <a class="nav-link active" href="/admin/product_handler"
+                >Products</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/admin/userbase">Users</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/admin/dashboard">Dashboard</a>
+            </li>
+          </ul>
+          <button class="btn btn-primary" type="button">
+            <a href="/logout" class="text-decoration-none text-white">Logout</a>
+          </button>
+        </div>
       </div>
-    </div>
+    </nav>
     <section class="vh-50" style="background-color: #eee">
       <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
           <div class="col col-lg-9 col-xl-7">
             <div class="card rounded-3">
               <div class="card-body p-2">
-                <h4 class="text-center my-3 pb-3">Category</h4>
+                <h2 class="text-center my-3 pb-3">Category</h2>
 
                 <form
                   class="row row-cols-lg-auto g-3 justify-content-center align-items-center mb-4 pb-2"
@@ -50,19 +81,20 @@
                       <br />
                       <dl>
                         <p>
-                          <!-- <br /> -->
                           <input type="file" name="file" autocomplete="off" />
                         </p>
                       </dl>
                     </div>
                   </div>
-                  <!-- 
-              <div class="col-12">
-                <button type="submit" class="btn btn-primary">Save</button>
-              </div> -->
 
                   <div class="col-10">
-                    <button type="submit" class="btn btn-warning">Add</button>
+                    <button
+                      onclick="validator(); return false;"
+                      id="add_cat"
+                      class="btn btn-warning"
+                    >
+                      Add
+                    </button>
                   </div>
                 </form>
 
@@ -71,8 +103,9 @@
                     <tr>
                       <th scope="col">Id</th>
                       <th scope="col">Name</th>
-                      <th scope="col">Image</th>
-                      <th scope="col">Actions</th>
+                      <th scope="col">Image <i>(Click to view image)</i></th>
+                      <th scope="col">Edit</th>
+                      <th scope="col"></th>
                     </tr>
                   </thead>
                   <tbody>
@@ -88,20 +121,37 @@
                         >
                       </td>
                       <td>
-                        <button type="submit" class="btn btn-danger">
-                          <a
-                            href="/admin/manage_category/delete/{{category.id}}"
-                            style="background-color: #dc3545"
-                            >Delete</a
-                          >
+                        <button
+                          type="submit"
+                          class="btn btn-success"
+                          onclick="edit_cat()"
+                        >
+                          Edit
                         </button>
-                        <button type="submit" class="btn btn-success ms-1">
-                          <a
-                            href="/admin/manage_category/edit/{{category.id}}"
-                            style="background-color: #198754"
-                            >Edit</a
-                          >
+                        <a
+                          id="edit_button"
+                          href="/admin/manage_category/edit/{{category.id}}"
+                          style="background-color: #198754"
+                          class="text-decoration-none text-white"
+                          hidden
+                        ></a>
+                      </td>
+                      <td>
+                        <button
+                          type="submit"
+                          class="btn btn-danger"
+                          onclick="del_cat()"
+                        >
+                          Delete
                         </button>
+                        <a
+                          href="/admin/manage_category/delete/{{category.id}}"
+                          style="background-color: #dc3545"
+                          class="text-decoration-none text-white"
+                          id="del_button"
+                          hidden
+                          >Delete</a
+                        >
                       </td>
                     </tr>
                     {% endfor %}
@@ -114,4 +164,46 @@
       </div>
     </section>
   </body>
+  <script>
+    admin_email = "{{admin.email}}";
+    admin_password = "{{admin.password}}";
+    function del_cat() {
+      var r = confirm("Are you sure you want to delete this category?");
+      if (r == true) {
+        email = prompt("Enter admin email");
+        password = prompt("Enter admin's password");
+        if (email == admin_email && password == admin_password) {
+          document.getElementById("del_button").click();
+        } else {
+          alert("Wrong credentials");
+        }
+      }
+    }
+    function edit_cat() {
+      var r = confirm("Are you sure you want to edit this category?");
+      if (r == true) {
+        email = prompt("Enter admin email");
+        password = prompt("Enter admin's password");
+        if (email == admin_email && password == admin_password) {
+          document.getElementById("edit_button").click();
+        } else {
+          alert("Wrong credentials");
+        }
+      }
+    }
+    function validator() {
+      var r = confirm("Are you sure you want to add this category?");
+      if (r == true) {
+        email = prompt("Enter admin email");
+        password = prompt("Enter admin's password");
+        if (email == admin_email && password == admin_password) {
+          document.getElementById("add_cat").submit();
+          window.location.reload();
+        } else {
+          return false;
+          alert("Wrong credentials");
+        }
+      }
+    }
+  </script>
 </html>
