--- a/templates/user/category.html
+++ b/templates/user/category.html
@@ -14,16 +14,9 @@
   <body>
     <div class="main">
       <div class="navigation">
-        <h1>EcoMart</h1>
-
-        <input
-          type="text"
-          placeholder="Search here"
-          class="searchC"
-          value=""
-          onChange="{handleChangeSearchValue}"
-        />
-
+        <a href="/">
+          <h1>EcoMart</h1>
+        </a>
         <div class="right-nav">
           <p><a href="/cart/{{user.id}}">Categories</a></p>
           <p><a href="/cart/{{user.id}}">Cart</a></p>
